--- a/Analyzing the effect of stress on students.ipynb
+++ b/Analyzing the effect of stress on students.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"background-color:#2BAE66FF;font-family:serif;color:white;font-size:350%;text-align:center;border-radius: 15px 50px;\">Case study : Caisse des Dépôts</h1>"
+    "<h1 style=\"background-color:#2BAE66FF;font-family:serif;color:white;font-size:250%;text-align:center;border-radius: 15px 50px;\">Analyzing the effect of stress on students
+</h1>"
    ]
   },
   {
